# cookiecutter-pdm

./: Makefile  README.md  cookiecutter.json
hooks/: pre_gen_project.py  pre_prompt.py
{{cookiecutter.git_slug}}/: pyproject.toml
