[project]
name = "{{ cookiecutter.pip_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_desc }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_mail }}"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]
tools = [
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]

[tool.mypy]
files = ["src/{{cookiecutter.module_name}}"]

[tool.ruff]
target-version = "py312"
line-length = 120


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"